feat(planejamentos): implementar fechamento operacional
